Small fixes and docker files.